# labdog

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile.py  conanfile.txt  sh.exe.stackdump
cmake/: FindGLFW.cmake  FindSpdlog.cmake  FindVulkan.cmake  ProjectSetup.cmake  SetupEnvironment.cmake  environment_setting.cmake  find_vulkan.cmake
cmake/Hunter/: config.cmake
cmake/labdog/: CMakeLists.txt
example/: CMakeLists.txt  bar.cpp
include/labdog/: foo.hpp  version.hpp.in
include/labdog/core/: common.hpp  platform.hpp  primitive_type.hpp  string.hpp
include/labdog/core/detail/: string.ipp  string_view.ipp
include/labdog/logging/: log.hpp
include/labdog/memory/: alignment.hpp
include/labdog/memory/detail/: alignment.ipp
labdog/include/labdog/core/: application.hpp  assertion.hpp  axis_code.hpp  charset_convert.hpp  common.hpp  concepts.hpp  dispatcher.hpp  event.hpp  export.hpp  input_axis_code.hpp  input_key_code.hpp  key_code.hpp  locator.hpp  logger.hpp  monitor.hpp  mouse.hpp  mouse_input.hpp  platform.hpp  point.hpp  primitive_type.hpp  registry.hpp  signal.hpp  size.hpp  string.hpp  string_view.hpp  strong_type.hpp  type_traits.hpp  unicode.hpp  unicode_convert.hpp  window.hpp
labdog/include/labdog/core/detail/: glfw_init.hpp  string.ipp  utf16_to_utf32.ipp  utf32_to_utf16.ipp  utf32_to_utf8.ipp  utf8_to_utf32.ipp
labdog/include/labdog/graphics/: graphics.hpp  window.hpp  window_manager.hpp
labdog/include/labdog/math/: scalar.hpp
labdog/include/labdog/memory/detail/: alignment.ipp
labdog/include/labdog/util/: assert.hpp
labdog/source/: string.cpp
labdog/source/core/: application.cpp  logger.cpp  mouse.cpp  mouse_input.cpp  string.cpp  string_view.cpp  unicode.cpp  unicode_convert.cpp  window.cpp
labdog/source/graphics/: graphics.cpp  window.cpp  window_manager.cpp
scripts/: build_linux.sh  build_ninja.sh  build_win.sh
source/: foo.cpp
test/: CMakeLists.txt  charset_convert_test.cpp  string_test.cpp  test.cpp  test.hpp  unicode_convert_test.cpp
